Removed Catch2 lib for GTest. Refactored tests to GTest. Removed destructor in Exciton/ExcitonTB classes which was causing issues with dangling pointers.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,4 +18,7 @@ jobs:
         run: docker build -t xatu-tests .
 
       - name: Run Catch2 tests
-        run: docker run --rm xatu-tests
+        run: |
+          export OMP_NUM_THREADS=1
+          export OPENBLAS_NUM_THREADS=1
+          docker run --rm xatu-tests
